--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,179 @@
-.ana-comm-cont {
+.gsa-box {
+  background: url("https://files.jcink.net/uploads/anaskins/always_grey.png")
+    #151515;
+  width: 300px;
+  border-radius: 15px;
+  border: 5px solid #111111;
+  --mgcolor1: 226, 134, 28;
+  --mgcolor2: 93, 163, 215;
+  --mgcolor3: 218, 69, 217;
+}
+
+.gsa-comm {
   display: flex;
-  justify-content: flex-start;
-  align-items: stretch;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   flex-flow: column nowrap;
-  background-color: #bbdefb;
-  height: 100%;
-  padding: 15px;
-  gap: 5px;
-  width: 400px;
-}
-
-.ana-comm-cont > div {
-  background: #ffecb3;
-}
-
-.ana-cc-top {
-}
-
-.ana-cc-top-cont {
-  background: orange;
-  display: flex;
   justify-content: flex-start;
   align-items: stretch;
-  flex-flow: row nowrap;
 }
 
-.ana-cc-top-cont .blob {
-  border-radius: 0% 100% 68% 32% / 47% 30% 70% 53%;
-  background: url(https://video-images.vice.com/_uncategorized/1567171965242-190714_GVS_ID_Shot_04_022.jpeg);
-  background-size: cover;
-  background-position: center;
-  width: 30vmin;
-  height: 30vmin;
-  box-shadow: -10vmin 10vmin 0 rgba(255, 255, 255, 0.07);
+.gsa-waves {
+  flex-basis: 100px;
+  background: url(https://files.jcink.net/uploads/anaskins/wave__2_.svg);
+  width: 300px;
+  height: 125px;
+  background-size: 325px 125px;
+  border-radius: 15px 15px 0 0;
 }
 
-.ana-cc-top-cont .char-header {
-  background: yellow;
-  padding: 10px;
-  align-self: center;
+.gsa-comm-inner {
+  display: flex;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
 
-.ana-cc-top-cont .char-header .title {
-  font-family: "Titan One", cursive;
-  text-transform: lowercase;
+.gsa-title {
+  font-family: "Megrim", cursive;
   font-size: 28px;
-  margin-left: 10px;
-  font-style: oblique;
-  line-height: 90%;
-  background: green;
+  font-weight: bold;
+  background: rgb(var(--mgcolor1));
+  background: -moz-linear-gradient(
+    270deg,
+    rgba(var(--mgcolor1)) 0%,
+    rgba(var(--mgcolor2)) 50%,
+    rgba(var(--mgcolor3)) 100%
+  );
+  background: -webkit-linear-gradient(
+    270deg,
+    rgba(var(--mgcolor1)) 0%,
+    rgba(var(--mgcolor2)) 50%,
+    rgba(var(--mgcolor3)) 100%
+  );
+  background: linear-gradient(
+    270deg,
+    rgba(var(--mgcolor1)) 0%,
+    rgba(var(--mgcolor2)) 50%,
+    rgba(var(--mgcolor3)) 100%
+  );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
-.ana-cc-top-cont .char-header .tag {
-  font-family: "Poppins", sans-serif;
-  font-size: 11px;
-  margin-left: 15px;
-  font-style: oblique;
+i.fi {
+  font-size: 16px;
 }
 
-.ana-cc-mid {
+.gsa-icon {
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+  border: 2px solid rgba(0, 0, 0, 1);
 }
 
-.ana-cc-bot {
+.gsa-comm-inner-cont {
+  width: 85%;
+  max-height: 400px;
+  overflow: auto;
+  background: #090909;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+  margin-top: 25px;
+  border-radius: 10px;
+  color: #e0e0e0;
+  padding: 15px;
+  text-align: justify;
+}
+
+.gsa-comm-inner-cont::-webkit-scrollbar {
+  width: 5px;
+}
+
+.gsa-comm-inner-cont::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 2px grey;
+  border-radius: 10px;
+}
+
+.gsa-comm-inner-cont::-webkit-scrollbar-thumb {
+  background: #333;
+  border-radius: 10px;
+}
+
+.gsa-comm-inner-cont::-webkit-scrollbar-thumb:hover {
+  background: #333;
+}
+
+.gsa-comm-inner-cont p {
+  padding: 8px;
+  min-width: 50%;
+  max-width: 90%;
+  border-radius: 10px;
+  background: #191919;
+}
+
+.gsa-comm-inner-cont b {
+  background: rgb(var(--mgcolor1));
+  background: -moz-linear-gradient(
+    270deg,
+    rgba(var(--mgcolor3)) 0%,
+    rgba(var(--mgcolor2)) 100%
+  );
+  background: -webkit-linear-gradient(
+    270deg,
+    rgba(var(--mgcolor3)) 0%,
+    rgba(var(--mgcolor2)) 100%
+  );
+  background: linear-gradient(
+    270deg,
+    rgba(var(--mgcolor3)) 0%,
+    rgba(var(--mgcolor2)) 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.gsa-comm-bottom {
+  background: rgb(var(--mgcolor1));
+  background: -moz-linear-gradient(
+    270deg,
+    rgba(var(--mgcolor1)) 0%,
+    rgba(var(--mgcolor2)) 50%,
+    rgba(var(--mgcolor3)) 100%
+  );
+  background: -webkit-linear-gradient(
+    270deg,
+    rgba(var(--mgcolor1)) 0%,
+    rgba(var(--mgcolor2)) 50%,
+    rgba(var(--mgcolor3)) 100%
+  );
+  background: linear-gradient(
+    270deg,
+    rgba(var(--mgcolor1)) 0%,
+    rgba(var(--mgcolor2)) 50%,
+    rgba(var(--mgcolor3)) 100%
+  );
+  padding: 5px;
+  border-radius: 10px;
+  -webkit-filter: grayscale(50%) brightness(70%);
+  filter: grayscale(50%) brightness(70%);
+}
+
+.gsa-comm-tag {
+  font-size: 10px;
+  text-transform: lowercase;
+  font-weight: bold;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 5px;
+  width: 70%;
+  margin: auto;
+  border-radius: 10px;
+  text-align: center;
 }
